--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  width: 100%;
+  height: 100vh;
+  background-color: #5f632d;
+  font-family: 'Lato', sans-serif;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.github-logo-container {
+  width: 100%;
+  margin: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  bottom: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.github-logo {
+  height: 40px;
+  cursor: pointer;
+}
+
+.rotate-diagonal:hover {
+  animation: rotate-diagonal-1 0.5s linear both;
+}
+
+@keyframes rotate-diagonal-1 {
+  0% {
+    transform: rotate3d(1, 1, 0, 0deg);
   }
-  to {
-    transform: rotate(360deg);
+
+  50% {
+    transform: rotate3d(1, 1, 0, -180deg);
+  }
+
+  100% {
+    transform: rotate3d(1, 1, 0, -360deg);
+  }
+}
+
+.calculator-container {
+  min-width: 400px;
+  min-height: 600px;
+  padding: 14px;
+  background-color: #717273;
+  border-radius: 20px;
+  border: 5px solid #000000;
+}
+
+.row {
+  margin: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media only screen and (max-width: 768px) {
+  .calculator-container {
+    min-width: 300px;
   }
 }
